# expent

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  Cargo.toml  GEMINI.md  README.md  architecture-improvements.md  biome.jsonc  docker-compose.yml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  secrets.env  skills-lock.json  turbo.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.jules/: BOLT.md  BOLT_JOURNAL.md  CORE.md  PALETTE.md  PALETTE_JOURNAL.md  SENTINEL.md  SENTINEL_JOURNAL.md
apps/api/: .env.example  Cargo.toml  package.json
apps/api/src/: background_tasks.rs  jobs.rs  main.rs
apps/api/src/middleware/: error.rs  metrics.rs  mod.rs  rate_limit.rs
apps/api/src/routes/: budgets.rs  categories.rs  contacts.rs  groups.rs  health.rs  mod.rs  ocr.rs  p2p.rs  reconciliation.rs  subscriptions.rs  transactions.rs  uploads.rs  wallets.rs
apps/app/src/app/(tabs)/: activity.tsx
apps/app/src/components/: forgot-password-form.tsx  reset-password-form.tsx
apps/app/src/lib/auth/: use-auth.ts
apps/dashboard/: next.config.ts  package.json  vitest.config.ts
apps/dashboard/src/app/(dashboard)/: layout.tsx  page.tsx
apps/dashboard/src/components/auth/: auth-guard.tsx  auth-page.tsx  auth-social.tsx  signIn.tsx  signUp.tsx
apps/dashboard/src/components/budgets/: create-budget-dialog.tsx
apps/dashboard/src/components/categories/: create-category-dialog.tsx
apps/dashboard/src/components/contacts/: create-contact-dialog.tsx
apps/dashboard/src/components/dashboard/: analytics.tsx  budget-health.tsx  category-chart.tsx  (+2 more)
apps/dashboard/src/hooks/: use-budgets.ts  use-categories.ts  use-contacts.ts  use-ocr.test.ts  use-ocr.ts  use-p2p.ts  use-reconciliation.ts  use-transactions.test.ts  use-transactions.ts  use-wallets.ts  use-wasm-logic.ts  use-wasm-search.ts
apps/dashboard/src/lib/: api-client.ts  auth-client.ts  data-table-schema.test.ts  data-table-types.ts  data-table-utilities.test.ts  db.ts  format.ts  pdf-utils.ts  wasm-utils.ts
apps/dashboard/src/test/: setup.ts
apps/ocr/: core.py  test_core.py  utils.py
apps/ocr/routers/bank/: schemas.py
apps/ocr/routers/generic_receipt/: schemas.py
apps/ocr/routers/gpay/: schemas.py
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/adapter/: account.rs  mod.rs  session.rs  user.rs  verification.rs
crates/auth/tests/: account_adapter.rs  session_adapter.rs  user_adapter.rs
crates/auth/tests/common/: mod.rs
crates/budgets/: Cargo.toml
crates/budgets/src/: lib.rs  tests.rs
crates/categories/: Cargo.toml
crates/categories/src/: lib.rs
crates/categories/src/ops/: create.rs  delete.rs  list.rs  system.rs
crates/contacts/: Cargo.toml
crates/contacts/examples/: bench_normalization.rs
crates/contacts/src/: lib.rs
crates/contacts/src/ops/: create.rs  delete.rs  get.rs  identifiers.rs  list.rs  merge.rs  mod.rs  resolve.rs  suggestions.rs  update.rs
crates/db/: Cargo.toml
crates/db/src/: dto.rs  lib.rs
crates/db/src/entities/: accounts.rs  background_jobs.rs  bank_statement_rows.rs  budgets.rs  categories.rs  contact_identifiers.rs  contact_links.rs  contact_staging.rs  contacts.rs  enums.rs  groups.rs  ledger_tabs.rs  mod.rs  ocr_job_edits.rs  ocr_jobs.rs  p2p_requests.rs  p2p_transfers.rs  prelude.rs  purchase_imports.rs  purchase_items.rs  purchases.rs  sessions.rs  statement_txn_matches.rs  sub_alerts.rs  subscription_charges.rs  subscriptions.rs  transaction_edits.rs  transaction_metadata.rs  transaction_sources.rs  transactions.rs  txn_parties.rs  user_groups.rs  user_upi_ids.rs  users.rs  verifications.rs  wallets.rs
crates/expent_core/: Cargo.toml
crates/expent_core/src/: bridge.rs  lib.rs
crates/expent_core/src/ocr_strategies/: bank_statement.rs
crates/expent_core/tests/: core_init_tests.rs  ledger_parity_tests.rs  subscription_tests.rs  transaction_tests.rs
crates/expent_core/tests/common/: mod.rs
crates/groups/: Cargo.toml
crates/groups/src/: lib.rs
crates/groups/src/groups/: create.rs  get.rs  list.rs  members.rs  transactions.rs
crates/groups/src/p2p/: ledger.rs  repayment.rs  requests.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260423_000001_add_cached_names_to_contacts.rs  m20260512_000001_add_bank_details_to_wallets.rs  m20260516_000001_create_background_jobs_table.rs  m20260522_000001_add_ocr_jobs_batch_and_idempotency.rs  m20260526_000001_enhance_background_jobs_table.rs  m20260526_000002_add_job_notifications.rs  m20260526_000003_add_performance_indexes.rs  m20260529_000001_add_transaction_date_index.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: gemini.rs  lib.rs  manager.rs  schema.rs  utils.rs  worker.rs
crates/ocr/src/ops/: confirm.rs  lifecycle.rs  merge.rs  mod.rs  process.rs
crates/ocr/src/strategies/: bank_statement.rs  generic.rs  gpay.rs  mod.rs
crates/ocr/src/strategies/bank/: mod.rs
crates/ocr/src/strategies/bank/icici/: mod.rs  prompts.rs  strategy.rs
crates/ocr/src/strategies/generic/: mod.rs  prompts.rs  strategy.rs
crates/ocr/src/strategies/upi/: mod.rs
crates/ocr/src/strategies/upi/gpay/: mod.rs  prompts.rs  strategy.rs
crates/ocr/tests/: schema_tests.rs
crates/reconciliation/: Cargo.toml
crates/reconciliation/src/: lib.rs  matching.rs  statement.rs
crates/subscriptions/: Cargo.toml
crates/subscriptions/src/: lib.rs  ops.rs
crates/transactions/: Cargo.toml
crates/transactions/src/: lib.rs  ops.rs  summary.rs  tests.rs
crates/upload/: Cargo.toml
crates/upload/src/: lib.rs  optimizer.rs
crates/users/: Cargo.toml
crates/users/src/: lib.rs
crates/users/src/ops/: profile.rs  upi.rs
crates/wallets/: Cargo.toml
crates/wallets/src/: lib.rs  ops.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: aggregations.rs  budget.rs  currency.rs  financial.rs  lib.rs  matching.rs  text.rs  validation.rs
docs/: core.md  database_schema.md  development.md  migration.md  ocr-worker.md  reconciliation.md  shared-packages.md  smart-budgeting-system.md  upload.md
(+53 files in other folders)
