[workspace]
members = [
  "apps/api",
  "crates/auth",
  "crates/expent_core",
  "crates/db",
  "crates/migration",
  "crates/ocr",
  "crates/upload",
  "crates/wallets",
  "crates/budgets",
  "crates/transactions",
  "crates/groups",
  "crates/reconciliation",
  "crates/subscriptions",
  "crates/contacts",
  "crates/categories",
  "crates/users",
  "crates/jobs",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
auth       = { path = "crates/auth", version = "0.1.0" }
budgets    = { path = "crates/budgets", version = "0.1.0" }
categories = { path = "crates/categories", version = "0.1.0" }
contacts   = { path = "crates/contacts", version = "0.1.0" }
db         = { path = "crates/db", version = "0.1.0" }

expent_core    = { path = "crates/expent_core", version = "0.1.0" }
groups         = { path = "crates/groups", version = "0.1.0" }
jobs           = { path = "crates/jobs", version = "0.1.0" }
ocr            = { path = "crates/ocr", version = "0.1.0" }
reconciliation = { path = "crates/reconciliation", version = "0.1.0" }
subscriptions  = { path = "crates/subscriptions", version = "0.1.0" }
transactions   = { path = "crates/transactions", version = "0.1.0" }
upload         = { path = "crates/upload", version = "0.1.0" }
users          = { path = "crates/users", version = "0.1.0" }
wallets        = { path = "crates/wallets", version = "0.1.0" }

# External crates
any_ascii = "0.1"
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-s3 = "1.73"
axum = { features = [ "multipart" ], version = "0.8" }
better-auth = { features = [ "axum", "derive" ], version = "0.9.0" }
chrono = { features = [ "serde" ], version = "0.4" }
dashmap = "6.1"
dotenvy = "0.15"
futures = "0.3"
governor = "0.8"
mimalloc = "0.1"
moka = { features = [ "future" ], version = "0.12" }
rand = "0.8"
regex = "1.10"
reqwest = { features = [ "json", "multipart" ], version = "0.12" }
rphonetic = "3.0"
rust_decimal = { features = [ "serde-with-str" ], version = "1.41" }
rust_decimal_macros = "1.40"
sea-orm = { features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "sqlx-sqlite",              # Add this feature
], version = "1.1.19" }
sea-orm-migration = { features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "sqlx-sqlite",
], version = "1.1.0" }
serde = { features = [ "derive" ], version = "1.0" }
serde_json = "1.0"
strum = { features = [ "derive" ], version = "0.26" }
thiserror = "2.0"
tokio = { features = [ "full" ], version = "1.44" }
tower-http = { features = [ "cors", "fs", "trace" ], version = "0.6" }
tower_governor = "0.8.0"
tracing = "0.1"
tracing-subscriber = { features = [ "env-filter" ], version = "0.3" }
ts-rs = { features = [ "chrono-impl", "serde-json-impl" ], version = "12.0.1" }
uuid = { features = [ "v7", "serde" ], version = "1.18" }
validator = { features = [ "derive" ], version = "0.20" }

[workspace.lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "deny", priority = -2 }
rust_2018_idioms    = { level = "warn", priority = -3 }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
perf     = { level = "deny", priority = -3 }
style    = { level = "warn", priority = -4 }
