[package]
name              = "api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace             = true
async-stream.workspace       = true
async-trait.workspace        = true
axum.workspace               = true
chrono.workspace             = true
dashmap.workspace            = true
db.workspace                 = true
dotenvy.workspace            = true
expent_core.workspace        = true
futures.workspace            = true
governor.workspace           = true
jobs.workspace               = true
mimalloc.workspace           = true
ocr.workspace                = true
reconciliation.workspace     = true
rust_decimal.workspace       = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tower-http.workspace         = true
tower_governor.workspace     = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace        = true
validator.workspace   = true
