[package]
name              = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace        = true
better-auth.workspace = true
chrono.workspace      = true
db                    = { workspace = true }
sea-orm.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
tracing.workspace     = true
uuid.workspace        = true

[lib]
doctest = false

[dev-dependencies]
anyhow.workspace = true
migration        = { workspace = true }
rstest           = "0.26.1"
tokio            = { features = ["macros", "rt-multi-thread"], workspace = true }
