[package]
name              = "budgets"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace = true
chrono.workspace              = true
rust_decimal.workspace        = true
rust_decimal_macros.workspace = true
sea-orm.workspace             = true
serde.workspace               = true
ts-rs.workspace               = true
uuid.workspace                = true

[dev-dependencies]
migration = { path = "../migration" }
tokio     = { features = [ "full" ], version = "1.44" }

[lints]
workspace = true
