[package]
name              = "budgets"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace              = true
db.workspace                  = true
rust_decimal.workspace        = true
rust_decimal_macros.workspace = true
sea-orm.workspace             = true
serde.workspace               = true
ts-rs.workspace               = true
uuid.workspace                = true

[dev-dependencies]
migration       = { path = "../migration" }
tokio.workspace = true

[lints]
workspace = true

[lib]
doctest = false
