[package]
name              = "contacts"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true

any_ascii.workspace = true
rphonetic.workspace = true
sea-orm.workspace   = true
serde.workspace     = true
strsim              = "0.11.1"
uuid.workspace      = true

[lints]
workspace = true
