[package]
name              = "db"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace       = true
rust_decimal.workspace = true
schemars.workspace     = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
strum.workspace        = true
thiserror.workspace    = true
ts-rs.workspace        = true

[lints]
workspace = true

[lib]
doctest = false
test    = false
