[package]
name              = "expent_core"
version.workspace = true
edition.workspace = true

[dependencies]
auth.workspace           = true
categories.workspace     = true
contacts.workspace       = true
db.workspace             = true
groups.workspace         = true
ocr.workspace            = true
reconciliation.workspace = true
subscriptions.workspace  = true
budgets.workspace        = true

transactions.workspace = true
upload.workspace       = true
users.workspace        = true
wallets.workspace      = true


any_ascii.workspace    = true
anyhow.workspace       = true
aws-config.workspace   = true
aws-sdk-s3.workspace   = true
better-auth.workspace  = true
chrono.workspace       = true
rand.workspace         = true
rphonetic.workspace    = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
strsim                 = "0.11.1"
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true


[dev-dependencies]
env_logger   = "0.11.3"
migration    = { path = "../migration" }
mockall      = "0.12.1"
rstest       = "0.26.1"
tracing-test = "0.2.5"

[lints]
workspace = true
