[package]
name              = "expent_core"
version.workspace = true
edition.workspace = true

[dependencies]
auth.workspace           = true
budgets.workspace        = true
categories.workspace     = true
contacts.workspace       = true
db.workspace             = true
groups.workspace         = true
jobs.workspace           = true
ocr.workspace            = true
reconciliation.workspace = true
subscriptions.workspace  = true

transactions.workspace = true
upload.workspace       = true
users.workspace        = true
wallets.workspace      = true
anyhow.workspace       = true
aws-config.workspace   = true
aws-sdk-s3.workspace   = true
better-auth.workspace  = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true


[dev-dependencies]
env_logger   = "0.11.3"
migration    = { path = "../migration" }
rstest       = "0.26.1"
tracing-test = "0.2.5"

[lints]
workspace = true
