[package]
name              = "groups"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace           = true
transactions.workspace = true
wallets.workspace      = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
uuid.workspace         = true

[lints]
workspace = true
