[package]
name              = "groups"
edition.workspace = true
version.workspace = true

[dependencies]
chrono.workspace       = true
db.workspace           = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
transactions.workspace = true
uuid.workspace         = true
wallets.workspace      = true

[lints]
workspace = true
