[package]
name              = "jobs"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace      = true
async-trait.workspace = true
chrono.workspace      = true
futures.workspace     = true
sea-orm.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
tracing.workspace     = true
uuid.workspace        = true
