[package]
name              = "migration"
version.workspace = true
edition.workspace = true
publish           = false

[lib]
doctest = false
name    = "migration"
path    = "src/lib.rs"
test    = false

[dependencies]
async-std                   = { features = [ "attributes", "tokio1" ], version = "1" }
sea-orm-migration.workspace = true
