[package]
name              = "ocr"
version.workspace = true
edition.workspace = true

[dependencies]
contacts.workspace = true
db.workspace       = true
upload.workspace   = true
wallets.workspace  = true

anyhow.workspace       = true
async-trait.workspace  = true
chrono.workspace       = true
rand.workspace         = true
reqwest.workspace      = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true
