[package]
name              = "ocr"
version.workspace = true
edition.workspace = true

[dependencies]
contacts.workspace = true
db.workspace       = true
upload.workspace   = true
wallets.workspace  = true

anyhow.workspace       = true
async-trait.workspace  = true
base64                 = "0.22"
calamine               = "0.22"
chrono.workspace       = true
csv                    = "1.3"
pdf-extract            = "0.7"
rand.workspace         = true
reqwest.workspace      = true
rust_decimal.workspace = true
schemars.workspace     = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true

[lib]
doctest = false
test    = false
