[package]
name              = "reconciliation"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true
