[package]
name              = "reconciliation"
edition.workspace = true
version.workspace = true

[dependencies]
chrono.workspace       = true
db.workspace           = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true

[lib]
doctest = false
test    = false
