[package]
name              = "subscriptions"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
strsim                 = "0.11.1"
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true
