[package]
name              = "subscriptions"
edition.workspace = true
version.workspace = true

[dependencies]
chrono.workspace       = true
db.workspace           = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
strsim                 = "0.11.1"
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true

[lib]
doctest = false
test    = false
