[package]
name              = "transactions"
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
chrono.workspace       = true
db.workspace           = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde_json.workspace   = true
tokio.workspace        = true
uuid.workspace         = true
wallets.workspace      = true

[dev-dependencies]
migration       = { path = "../migration" }

[lints]
workspace = true
