[package]
name              = "upload"
version.workspace = true
edition.workspace = true

[dependencies]
aws-sdk-s3.workspace = true
bytes                = "1.0"
image                = "0.25"
image_hasher         = "3.1"
infer                = "0.16"
mime_guess           = "2.0"
serde.workspace      = true
serde_bytes          = "0.11"
thiserror.workspace  = true
tokio.workspace      = true
uuid.workspace       = true
