[package]
name              = "users"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace = true

chrono.workspace      = true
regex.workspace       = true
sea-orm.workspace     = true
uuid.workspace        = true

[lints]
workspace = true

[dev-dependencies]
sea-orm = { features = [ "mock" ], workspace = true }
tokio   = { features = [ "full" ], workspace = true }
