[package]
name              = "users"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace = true

chrono.workspace  = true
regex.workspace   = true
sea-orm.workspace = true
uuid.workspace    = true


[lints]
workspace = true

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["full"] }
