[package]
name              = "wallets"
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
chrono.workspace       = true
db.workspace           = true
moka.workspace         = true
rust_decimal.workspace = true
sea-orm.workspace      = true
uuid.workspace         = true

[dev-dependencies]
sea-orm = { features = [ "mock" ], workspace = true }
tokio   = { features = [ "full" ], workspace = true }

[lints]
workspace = true
