[package]
name    = "wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
any_ascii    = { workspace = true }
calamine     = "0.26"
chrono       = { features = [ "wasmbind" ], workspace = true }
csv          = "1.3"
rphonetic    = "3.0"
rust_decimal = { workspace = true }
regex        = { workspace = true }
serde        = { features = [ "derive" ], workspace = true }
serde_json   = { workspace = true }
serde-wasm-bindgen = "0.6"
strsim       = "0.11"
ts-rs        = { workspace = true }
getrandom    = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.121"
